--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -74,6 +75,7 @@
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "motion": "^11.17.0",
     "next": "^16.0.1",
