--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@types/sort-by": "^1.2.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "dotenv": "^16.4.5",
     "googleapis": "^140.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
