--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/scripts/**/*"
   ],
   "moduleResolution": [
     "node_modules",
