--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "zod": "^4.1.8",
@@ -119,6 +118,7 @@
     "lint-staged": "^15.2.11",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "typescript": "5.6.3"
   }
 }
