--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.8",
     "zustand": "^5.0.2"
   },
