--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
+    "@langchain/langgraph": "^1.0.15",
+    "@langchain/langgraph-sdk": "^1.5.3",
+    "@langchain/openai": "^1.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -64,6 +67,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "ai": "^6.0.33",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -73,6 +77,7 @@
     "eslint-config-next": "^16.0.1",
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
+    "langchain": "^1.2.8",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
     "mongodb": "^7.0.0",
